Implement spatial indexing, which decreased the time it took to query SQLite based storage by nearly 100% (97.3% to be exact).
Tick times for the ``#isHoneypotBlock()`` method were nearly 22.36% on previous versions of Honeypot. They are now 0.23%.